# tasks-manager

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: dependencies.py  main.py
src/api/v1/: __init__.py  task.py
src/core/: config.py  logging.py
src/db/: session.py
src/models/: task.py
src/repositories/: task.py
src/schemas/: task.py
src/services/: task.py
tests/: conftest.py  test_task.py
